--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kuser (4:4.11.3-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 09 Nov 2013 20:26:41 +0100
+
 kuser (4:4.11.2-1) experimental; urgency=low
 
   * First release of kdeadmin after being split by upstream.
