--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kuser (4:4.11.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Update build dependencies.
 
  -- Maximiliano Curia <maxy@debian.org>  Sat, 09 Nov 2013 20:26:41 +0100
 
