--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kuser (4:4.11.4-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 06 Dec 2013 16:21:42 +0100
+
 kuser (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
