--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kuser (4:4.11.5-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Bump Standards-Version to 3.9.5, no changes needed.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 28 Jan 2014 17:22:52 +0100
 
