--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kuser (4:4.11.5-1) UNRELEASED; urgency=low
+kuser (4:4.12.2-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Bump Standards-Version to 3.9.5, no changes needed.
+  * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 28 Jan 2014 17:22:52 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 19:27:21 +0100
 
 kuser (4:4.11.3-1) unstable; urgency=low
 
