--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kuser (4:4.12.2-1) UNRELEASED; urgency=low
+kuser (4:4.12.2-1) experimental; urgency=low
 
   * New upstream release.
   * Bump Standards-Version to 3.9.5, no changes needed.
   * New upstream release.
   * Bump kde-sc-dev-latest build dependency.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 19:27:21 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 10 Feb 2014 11:31:48 +0100
 
 kuser (4:4.11.3-1) unstable; urgency=low
 
