--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kuser (4:4.12.2-2) UNRELEASED; urgency=medium
+
+  * Release to unstable
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 17 Apr 2014 15:13:08 +0200
+
 kuser (4:4.12.2-1) experimental; urgency=low
 
   * New upstream release.
