--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kuser (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Remove kdelibs5-dev depend version as there was not a new release.
+  * Remove kdepimlibs5-dev depend version as there was not a new release.
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 12 Dec 2014 11:34:09 -0800
 
