--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kuser (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
   * Remove kdelibs5-dev depend version as there was not a new release.
