--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kuser (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 09 Mar 2015 11:17:19 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 13 Mar 2015 14:32:10 -0700
 
 kuser (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
