--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kuser (4:14.12.3-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (14.12.3).
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 26 Mar 2015 12:33:48 +0100
+
 kuser (4:4.12.2-2) unstable; urgency=medium
 
   * Release to unstable
