--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kuser (4:14.12.3-1~) UNRELEASED; urgency=medium
 
   * New upstream release (14.12.3).
+  * Bump Standards-Version to 3.9.6.
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 26 Mar 2015 12:33:48 +0100
 
