--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kuser (4:14.12.3-1~) UNRELEASED; urgency=medium
+kuser (4:14.12.3-1) experimental; urgency=medium
 
   * New upstream release (14.12.3).
   * Bump Standards-Version to 3.9.6.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 26 Mar 2015 12:33:48 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 29 Mar 2015 15:13:05 +0200
 
 kuser (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
