--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kuser (4:15.04.0-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 15 Apr 2015 14:52:42 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 22:42:06 -0700
 
 kuser (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
