--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-kuser (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * New upstream release
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 22:42:06 -0700
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 06 Jun 2015 02:08:37 +0200
 
 kuser (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
