--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kuser (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:15.07.90-0ubuntu1) wily; urgency=medium
 
   * new upstream beta release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 11:38:27 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 18 Aug 2015 11:21:29 +0100
 
 kuser (4:15.04.2-0ubuntu1) wily; urgency=medium
 
