--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kuser (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:15.08.2-0ubuntu1) wily; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 15:02:40 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 12:53:57 +0100
 
 kuser (4:15.08.1-0ubuntu1) wily; urgency=medium
 
