--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kuser (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Vivid backport
+  * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 01 Oct 2015 12:28:11 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Sun, 18 Oct 2015 10:24:23 -0700
 
 kuser (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
