--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kuser (4:15.12.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.12.0).
+  * Fixes FTBFS. (Closes: #808740)
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:11:35 +0100
 
