--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kuser (4:15.12.0-1~) UNRELEASED; urgency=medium
+kuser (4:15.12.0-1) experimental; urgency=medium
 
   * New upstream release (15.12.0).
   * Fixes FTBFS. (Closes: #808740)
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:11:35 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 01 Feb 2016 10:22:44 +0100
 
 kuser (4:14.12.3-1) experimental; urgency=medium
 
