--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kuser (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
   * New upstream release
   * Merged with Debian
 
- -- Clive Johnston <clivejo@aol.com>  Mon, 08 Feb 2016 21:09:43 +0000
+ -- Clive Johnston <clivejo@aol.com>  Wed, 09 Mar 2016 11:24:05 +0100
 
 kuser (4:15.12.0-1) experimental; urgency=medium
 
