--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kuser (4:15.12.3-0ubuntu1) UNRELEASED; urgency=medium
+kuser (4:15.12.3-0ubuntu1) xenial; urgency=medium
 
   * New upstream bugfix release
   * New upstream bugfix release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 16 Mar 2016 20:32:14 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 Apr 2016 16:14:13 -0700
 
 kuser (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
