--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kuser (4:15.12.0-3) unstable; urgency=medium
+
+  * Release to unstable.
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 31 May 2016 12:52:49 +0200
+
 kuser (4:15.12.0-2) experimental; urgency=medium
 
   [ Automatic packaging ]
