--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kuser (4:16.08.0-0r1) UNRELEASED; urgency=medium
+
+  [ Pino Toscano ]
+  * New upstream release.
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 28 Aug 2016 07:03:06 +0200
+
 kuser (4:15.12.0-3) unstable; urgency=medium
 
   * Release to unstable.
