explicitly add kdelibs5-dev B-D
this way a null phonon backend is installed

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ kuser (4:16.08.0-0r1) UNRELEASED; urgency=medium
     directory as install place.
     - remove kuser.install, no more used now
   * Fix typo in man page.
+  * Explicitly add kdelibs5-dev as build dependency, so a null phonon backend
+    is installed.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 28 Aug 2016 07:03:06 +0200
 
